--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #fb4fb4; }
+  background: #947847; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6606f3; }
+  background: #6c1a36; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9dd565; }
+  background: #891c02; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #591c2e; }
+  background: #f4d33a; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #0f6405; }
+  background: #54ccf8; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #765ec4; }
+  background: #850fa8; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #12faee; }
+  background: #0ac413; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #b2e402; }
+  background: #a8ea7d; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #4a473e; }
+  background: #2f6ae7; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #720967; }
+  background: #32ad58; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #fd587b; }
+  background: #ee1c29; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #98332e; }
+  background: #b4f83e; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #ffa8cc; }
+  background: #7e6f60; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #664a52; }
+  background: #4fc03c; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #3b62f8; }
+  background: #c5118f; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #f7cf05; }
+  background: #2f521f; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #df3ac5; }
+  background: #ede38a; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #ff2f62; }
+  background: #0433f4; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #d8bb4c; }
+  background: #19df4f; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #8cd518; }
+  background: #1b018e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #ff23f2; }
+  background: #1c038a; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #82300a; }
+  background: #374217; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #fc370b; }
+  background: #ea8997; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #0869be; }
+  background: #cc6769; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #f859a1; }
+  background: #199f5a; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #28701e; }
+  background: #28b2ca; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #1fc6d1; }
+  background: #37cce5; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #b72f6e; }
+  background: #874f91; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f99c6c; }
+  background: #78c746; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #503727; }
+  background: #021ea6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #b1721e; }
+  background: #118f8f; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3a896d; }
+  background: #6dd2d2; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #d8cc9e; }
+  background: #a15ba7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #cafbc1; }
+  background: #e953df; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4950da; }
+  background: #b32eb0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #cb538c; }
+  background: #03e7cd; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #9bb241; }
+  background: #df2bae; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #9347a6; }
+  background: #b94f25; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3ad8b0; }
+  background: #5dd070; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #475713; }
+  background: #142318; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #3b9692; }
+  background: #47acf5; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #91a132; }
+  background: #ca5c3c; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #06cbad; }
+  background: #de5d94; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #368b7a; }
+  background: #5b4724; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #d6ceda; }
+  background: #bef27b; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #dd0505; }
+  background: #1534c7; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #075f24; }
+  background: #032ae6; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #49fe4c; }
+  background: #0c18b6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #eabf42; }
+  background: #2f8117; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #f20f81; }
+  background: #77744e; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #3c49e3; }
+  background: #cc9d35; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #672433; }
+  background: #0a1277; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #8e7a0b; }
+  background: #acba7f; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #2f87a4; }
+  background: #b1cec0; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #63d28f; }
+  background: #db54bf; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e3b2e4; }
+  background: #e19b48; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #6c1cb0; }
+  background: #5a551d; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #8d098c; }
+  background: #d3e6c9; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #290216; }
+  background: #252f0b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #ef93a5; }
+  background: #eb991a; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #c9ccde; }
+  background: #eec603; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #40d371; }
+  background: #a2b1b2; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #197589; }
+  background: #72ba8e; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #3fa52a; }
+  background: #f301e3; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #d18b38; }
+  background: #834939; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #b434ca; }
+  background: #25c3f9; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #6febfb; }
+  background: #c8b4ea; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #35787b; }
+  background: #b6b449; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #a38848; }
+  background: #ab8e3f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a75bfa; }
+  background: #d404cf; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #e7345e; }
+  background: #0d297f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #554229; }
+  background: #5ef001; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #62415e; }
+  background: #552a3d; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #c491a0; }
+  background: #e94a59; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #02c0b6; }
+  background: #05307b; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #17ccd1; }
+  background: #57a56f; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6777a2; }
+  background: #d44a2e; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #db6938; }
+  background: #4b0c61; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #337dd6; }
+  background: #82a125; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #c3cea8; }
+  background: #67776e; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #641f62; }
+  background: #a630dd; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #d8e315; }
+  background: #f3b1df; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #fa0509; }
+  background: #773685; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #b8eb8c; }
+  background: #c35032; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #60ddb4; }
+  background: #656fe4; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #45c7f0; }
+  background: #438e63; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #691c86; }
+  background: #8c5678; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #4a76c9; }
+  background: #2407f6; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #eb88d3; }
+  background: #f56956; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e60ed6; }
+  background: #6a444f; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #335dd5; }
+  background: #381142; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7c04cc; }
+  background: #d34713; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #d17593; }
+  background: #2e6c4d; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #4cbd20; }
+  background: #0689e2; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #f8d04c; }
+  background: #bf9842; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4c7c48; }
+  background: #ee7e01; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #2ef58e; }
+  background: #b4478a; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #95962a; }
+  background: #5c089b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b8f6bf; }
+  background: #dcdbd9; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #6e0dba; }
+  background: #9be8c0; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16301,7 +16301,7 @@ option {
   align-items: center;
   grid-template-columns: 1fr auto;
   grid-gap: 15px;
-  margin: 10px 0px 10px;
+  margin: 15px 0px 10px;
   padding: 14px 0px 14px; }
 
 .assets-details-modal-title {
