--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #947847; }
+  background: #926991; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #6c1a36; }
+  background: #83dc20; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #891c02; }
+  background: #9b0e10; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f4d33a; }
+  background: #f6c9fa; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #54ccf8; }
+  background: #9a3fd3; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #850fa8; }
+  background: #a60e89; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #0ac413; }
+  background: #72e747; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #a8ea7d; }
+  background: #60afa1; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #2f6ae7; }
+  background: #3d5214; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #32ad58; }
+  background: #78da77; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #ee1c29; }
+  background: #653a9b; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #b4f83e; }
+  background: #cf2248; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #7e6f60; }
+  background: #342f8a; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #4fc03c; }
+  background: #7bc38a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #c5118f; }
+  background: #737037; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #2f521f; }
+  background: #9c9123; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #ede38a; }
+  background: #82a342; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #0433f4; }
+  background: #dfe0b2; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #19df4f; }
+  background: #ae947d; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #1b018e; }
+  background: #36c836; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1c038a; }
+  background: #c87f55; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #374217; }
+  background: #126f37; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #ea8997; }
+  background: #679163; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #cc6769; }
+  background: #a9f22e; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #199f5a; }
+  background: #796f25; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #28b2ca; }
+  background: #fbf8ec; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #37cce5; }
+  background: #79cd98; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #874f91; }
+  background: #bb3bc4; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #78c746; }
+  background: #b236df; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #021ea6; }
+  background: #888aa6; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #118f8f; }
+  background: #cb4dba; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #6dd2d2; }
+  background: #4bf98d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #a15ba7; }
+  background: #8e9260; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #e953df; }
+  background: #ec1385; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #b32eb0; }
+  background: #330b54; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #03e7cd; }
+  background: #f36679; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #df2bae; }
+  background: #b1a06b; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #b94f25; }
+  background: #e8cac0; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #5dd070; }
+  background: #922059; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #142318; }
+  background: #191453; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #47acf5; }
+  background: #f92c4c; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #ca5c3c; }
+  background: #4a42f3; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #de5d94; }
+  background: #5d84dc; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #5b4724; }
+  background: #a7706a; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #bef27b; }
+  background: #140228; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #1534c7; }
+  background: #445e95; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #032ae6; }
+  background: #e47557; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0c18b6; }
+  background: #0c844d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #2f8117; }
+  background: #680c0d; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #77744e; }
+  background: #372264; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #cc9d35; }
+  background: #e1214b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #0a1277; }
+  background: #ad5312; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #acba7f; }
+  background: #9dbfd2; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #b1cec0; }
+  background: #f2cc35; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #db54bf; }
+  background: #8a7304; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #e19b48; }
+  background: #df1eeb; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #5a551d; }
+  background: #ffe856; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #d3e6c9; }
+  background: #3b9e01; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #252f0b; }
+  background: #c3390f; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #eb991a; }
+  background: #c4d53f; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #eec603; }
+  background: #a5954e; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #a2b1b2; }
+  background: #ab0cc5; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #72ba8e; }
+  background: #3d470b; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #f301e3; }
+  background: #bfc799; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #834939; }
+  background: #ad389e; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #25c3f9; }
+  background: #7b4e11; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #c8b4ea; }
+  background: #3f4a64; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #b6b449; }
+  background: #0a024a; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #ab8e3f; }
+  background: #22630c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d404cf; }
+  background: #5ee94c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #0d297f; }
+  background: #f586f6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #5ef001; }
+  background: #c748c5; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #552a3d; }
+  background: #cb19a5; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #e94a59; }
+  background: #d0697b; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #05307b; }
+  background: #27f6bc; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #57a56f; }
+  background: #aed8e0; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #d44a2e; }
+  background: #64cd2b; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #4b0c61; }
+  background: #5ec3fe; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #82a125; }
+  background: #88cd34; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #67776e; }
+  background: #bf671a; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a630dd; }
+  background: #ac828d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #f3b1df; }
+  background: #988e47; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #773685; }
+  background: #416cf8; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c35032; }
+  background: #9150bc; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #656fe4; }
+  background: #ecd5a9; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #438e63; }
+  background: #9a4eda; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #8c5678; }
+  background: #2d1b78; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #2407f6; }
+  background: #9795a2; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #f56956; }
+  background: #8109b2; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #6a444f; }
+  background: #be84bc; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #381142; }
+  background: #32b546; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #d34713; }
+  background: #87c658; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #2e6c4d; }
+  background: #a4f4b6; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #0689e2; }
+  background: #e40437; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #bf9842; }
+  background: #bd4f7a; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #ee7e01; }
+  background: #de63e8; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #b4478a; }
+  background: #cd49d8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #5c089b; }
+  background: #9d0ef3; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #dcdbd9; }
+  background: #2cb6ca; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #9be8c0; }
+  background: #0830c4; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16379,6 +16379,8 @@ option {
   align-items: center;
   width: 100%;
   direction: rtl !important; }
+  .main-summary-tabs-flow-right-text .mCSB_container {
+    width: auto !important; }
 
 .events-policy-tabs {
   display: grid;
