--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8725,205 +8725,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #926991; }
+  background: #c36b4c; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #83dc20; }
+  background: #d85d30; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #9b0e10; }
+  background: #f9f548; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #f6c9fa; }
+  background: #adcaf5; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #9a3fd3; }
+  background: #e64499; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #a60e89; }
+  background: #f9065d; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #72e747; }
+  background: #830588; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #60afa1; }
+  background: #8b5fd5; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #3d5214; }
+  background: #4642ec; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #78da77; }
+  background: #e4a6a9; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #653a9b; }
+  background: #f06eb9; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #cf2248; }
+  background: #4f8513; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #342f8a; }
+  background: #e6aaff; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #7bc38a; }
+  background: #df148a; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #737037; }
+  background: #5b5820; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #9c9123; }
+  background: #39a96d; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #82a342; }
+  background: #73b55b; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #dfe0b2; }
+  background: #28c0c9; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ae947d; }
+  background: #081278; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #36c836; }
+  background: #1d8204; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #c87f55; }
+  background: #7a461d; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #126f37; }
+  background: #72b679; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #679163; }
+  background: #d2978e; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #a9f22e; }
+  background: #7f10b1; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #796f25; }
+  background: #4ff2e7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #fbf8ec; }
+  background: #a871b6; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #79cd98; }
+  background: #12d52a; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #bb3bc4; }
+  background: #11cf2d; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #b236df; }
+  background: #bb31e5; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #888aa6; }
+  background: #1669cd; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #cb4dba; }
+  background: #451d52; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #4bf98d; }
+  background: #2db782; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #8e9260; }
+  background: #e23733; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #ec1385; }
+  background: #0751e1; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #330b54; }
+  background: #a435a0; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #f36679; }
+  background: #96f85a; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #b1a06b; }
+  background: #d78ce8; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #e8cac0; }
+  background: #b312a1; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #922059; }
+  background: #757b61; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #191453; }
+  background: #b86d81; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #f92c4c; }
+  background: #c76dd0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #4a42f3; }
+  background: #b714ee; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #5d84dc; }
+  background: #7dccc5; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #a7706a; }
+  background: #db06db; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #140228; }
+  background: #64d97d; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #445e95; }
+  background: #f6f721; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #e47557; }
+  background: #6fbdb7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #0c844d; }
+  background: #0a280b; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #680c0d; }
+  background: #dfc863; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #372264; }
+  background: #2b8523; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e1214b; }
+  background: #21be49; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #ad5312; }
+  background: #c6808c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9dbfd2; }
+  background: #7bed6e; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #f2cc35; }
+  background: #1cbe36; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #8a7304; }
+  background: #45c9a4; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #df1eeb; }
+  background: #c2943b; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #ffe856; }
+  background: #7390c6; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #3b9e01; }
+  background: #322a4d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #c3390f; }
+  background: #6acfa3; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #c4d53f; }
+  background: #76420b; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #a5954e; }
+  background: #01d412; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ab0cc5; }
+  background: #9849ca; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #3d470b; }
+  background: #36a818; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #bfc799; }
+  background: #8b85a0; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #ad389e; }
+  background: #7da699; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #7b4e11; }
+  background: #c241fc; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #3f4a64; }
+  background: #cc1acc; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #0a024a; }
+  background: #b5ee8d; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #22630c; }
+  background: #41174e; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #5ee94c; }
+  background: #4ccdc7; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #f586f6; }
+  background: #906153; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c748c5; }
+  background: #5b0240; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #cb19a5; }
+  background: #88e3fa; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #d0697b; }
+  background: #724627; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #27f6bc; }
+  background: #115274; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #aed8e0; }
+  background: #5e5527; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #64cd2b; }
+  background: #cedeb8; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #5ec3fe; }
+  background: #fe56ce; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #88cd34; }
+  background: #3b4d19; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #bf671a; }
+  background: #3333ab; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #ac828d; }
+  background: #631f8b; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #988e47; }
+  background: #d79315; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #416cf8; }
+  background: #dc5d08; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #9150bc; }
+  background: #2e4d28; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #ecd5a9; }
+  background: #b41b88; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #9a4eda; }
+  background: #f5c016; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #2d1b78; }
+  background: #32e768; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #9795a2; }
+  background: #8e7caf; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #8109b2; }
+  background: #7f0edc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #be84bc; }
+  background: #184dd1; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #32b546; }
+  background: #8071af; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #87c658; }
+  background: #2a5c06; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a4f4b6; }
+  background: #4e5e0f; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e40437; }
+  background: #65e7f1; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #bd4f7a; }
+  background: #aa1baf; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #de63e8; }
+  background: #f2cf82; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #cd49d8; }
+  background: #a15f75; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #9d0ef3; }
+  background: #4f1c9b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #2cb6ca; }
+  background: #5106c3; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #0830c4; }
+  background: #4ebffa; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -16339,7 +16339,7 @@ option {
   .tabs-flow-main-header-row .mCustomScrollBox {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(130px, 1fr));
-    height: 47px !important; }
+    height: 53px !important; }
 
 .main-summary-tabs-flow {
   overflow-x: scroll;
@@ -16396,15 +16396,16 @@ option {
     height: 24px; }
   .events-policy-tabs a {
     text-align: center;
-    padding: 10px 14px;
-    border-top: 1px solid #fff; }
+    padding: 14px 14px;
+    border-top: 1px solid #fff;
+    height: 54px; }
     .events-policy-tabs a img {
       width: 23px; }
     .events-policy-tabs a .active, .events-policy-tabs a:hover {
       background: #f6f6f6;
-      padding: 10px 14px;
+      padding: 14px 14px;
       border-top: 1px solid #4c4c4c;
-      height: auto;
+      height: 54px;
       position: relative; }
 
 .tabs-flowing-box {
